--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Perl module Geo::GoogleEarth::Pluggable::Plugin::Styles
 
-0.01 Sat Nov 14 15:22:19 2009
-    - original version; created by ExtUtils::ModuleMaker 0.51
-
-
+0.02 2009-11-16
+  - Add script example to distribution
+  - Added Documentation
+0.01 2009-11-14
+  - original version
